app/assets/stylesheets/partials/nav.scss
nav {
  height: 60px;
  margin-bottom: 0;
  background-color: $nav-color;
  border-bottom: 2px $border-color solid;
  margin-bottom: 6em;

  @include media($desktop) {
    margin-bottom: 2em;
    ul {
      display: inline-block;
      li {
        float: left;
      }
    }
  }

  ul {
    li {
      padding-right: 2em;
    }

    li:nth-child(5) {
      padding-left: 6em;
      text-transform: uppercase;
    }

    a:link, a:visited {
      color: $text-color;
      font-family: $lobster;
    }
    a:hover {
      color: $link-highlight;
    }
  }
  #picky-nav {
    position: relative;
    font-size: 2em;
    font-family: $lobster;
    color: white;
    text-shadow: .5px .5px $dark-orange;
    bottom: .4em;
    margin-bottom: 0;
    padding-bottom: 0;
  }
}

